# bio1

./: 1.1.ipynb  1.2.ipynb  2.1-initialstatistics.ipynb  2.2-2.3.ipynb  Assignment 1 bio.ipynb  Group Members.txt  getfiles.py  gettables.py  initialstatistics.ipynb  merged_data.xlsx  merged_data_2.2.xlsx  merged_data_features.xlsx  merged_data_final.xlsx  merged_data_folded.xlsx  mergedata.py  pyproject.toml
.ipynb_checkpoints/: initialstatistics-checkpoint.ipynb
2.1-download-and-merge/: mergedata.py
code/: 2.4-2.5.ipynb  pyproject.toml
code/2.1-download-and-merge/: mergedata.py
data/: cel.csv  cel_gff.gff  cel_mature.fas  cel_pre.fas  cel_star.fas  dme.csv  dme_gff.gff  dme_mature.fas  dme_pre.fas  dme_star.fas  hsa.csv  hsa_gff.gff  hsa_mature.fas  hsa_pre.fas  hsa_star.fas  mmu.csv  mmu_gff.gff  mmu_mature.fas  mmu_pre.fas  mmu_star.fas
